Main section on mobile devices fix

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -12,3 +12,15 @@ main {
     }
   }
 }
+
+@media (max-width: 1280px) {
+  .card-row {
+    width: 50%;
+  }
+}
+
+@media (max-width: 640px) {
+  .card-row {
+    width: 100%;
+  }
+}
